fix: some small z-index fixes on the identity page

--- a/src/pages/identity/Identity.css
+++ b/src/pages/identity/Identity.css
@@ -11,6 +11,7 @@
         right: 0%;
         width: 100%;
         height: 50%;
+        z-index: 1;
         background-color: var(--color-mineral-green);
     }
 
@@ -21,7 +22,7 @@
         right: 0%;
         width: 100%;
         height: 50%;
-        z-index: -1;
+        z-index: 1;
         background-color: color(var(--color-dawn-pink) alpha(0.8));
     }
 
@@ -31,10 +32,16 @@
         left: 0;
         width: 100%;
         height: 100%;
+        z-index: 2;
         opacity: 0.1;
         background-image: url("../../shared/media/backgrounds/background-pattern-2160p.png");
         background-position: center center;
         background-size: cover;
+    }
+
+    & .layout {
+        position: relative;
+        z-index: 3;
     }
 
     & .top {
